tests/ui/parser/colon-in-tuple-struct.stderr
error: expected one of `!`, `(`, `)`, `+`, `,`, `::`, or `<`, found `:`
  --> $DIR/colon-in-tuple-struct.rs:3:23
   |
LL | struct Foo(std::string:String);
   |                       ^ expected one of 7 possible tokens
   |
help: if you meant to write a path, use a double colon
   |
LL | struct Foo(std::string::String);
   |                        +

error: aborting due to 1 previous error

